src/objects/Credit_Report_Log__c.object
<CustomObject>
    <description>Credit Reporting History for Accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>Customer Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Report Logs</relationshipLabel>
        <relationshipName>Credit_Report_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Score_Number__c</fullName>
        <description>Applicant Score as a Number</description>
        <formula>VALUE(Applicant_Score__c )</formula>
        <inlineHelpText>Applicant Score as a Number</inlineHelpText>
        <label>Applicant Score (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_Score__c</fullName>
        <label>Applicant Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <label>Application #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astrum_Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sales Rep or Astrum Employee who requested the credit report</inlineHelpText>
        <label>Astrum Rep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Report_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEG_Approved_Binary__c</fullName>
        <description>Is CEG Approved? 1=Yes 0=No</description>
        <formula>IF(ISPICKVAL(CEG_Approved__c,&apos;YES&apos;),1,0)</formula>
        <inlineHelpText>Is CEG Approved? 1=Yes 0=No</inlineHelpText>
        <label>CEG Approved Binary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CEG_Approved__c</fullName>
        <description>Was This Credit Accepted by CEG?</description>
        <inlineHelpText>Was This Credit Accepted by CEG?</inlineHelpText>
        <label>CEG Approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Name__c</fullName>
        <label>Co-Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Score_Number__c</fullName>
        <description>Co-Applicant Score as a Number</description>
        <formula>VALUE(Co_Applicant_Score__c )</formula>
        <inlineHelpText>Co-Applicant Score as a Number</inlineHelpText>
        <label>Co-Applicant Score (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Score__c</fullName>
        <label>Co-Applicant Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Pull_Age_Days__c</fullName>
        <description>Number of Days Since Credit Was Pulled</description>
        <formula>TODAY() -Credit_Pull_Date__c</formula>
        <inlineHelpText>Number of Days Since Credit Was Pulled</inlineHelpText>
        <label>Credit Pull Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Pull_Date__c</fullName>
        <label>Credit Pull Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Rep__c</fullName>
        <inlineHelpText>Constellation Representative</inlineHelpText>
        <label>Credit Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRA_Letter_Sent__c</fullName>
        <label>FCRA Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minimum_Score__c</fullName>
        <description>The Minimum Credit Score of Applicant and Co-Applicant</description>
        <formula>MIN(VALUE(Applicant_Score__c),VALUE( Co_Applicant_Score__c ))</formula>
        <inlineHelpText>The Minimum Credit Score of Applicant and Co-Applicant</inlineHelpText>
        <label>Minimum Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Report Logs</relationshipLabel>
        <relationshipName>Credit_Report_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Credit Report Log</label>
    <nameField>
        <displayFormat>CRL-{000000}</displayFormat>
        <label>Credit Report Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Report Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>